--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,6 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./color-picker.js"></script>
+    <script src="./promise.js"></script>
   </body>
 </html>
